--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id "org.jetbrains.kotlin.kapt"
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -64,9 +65,9 @@ dependencies {
     implementation 'io.coil-kt:coil-compose:2.1.0'
     implementation 'io.coil-kt:coil-gif:2.1.0'
     // 沉浸式状态栏
-    implementation "com.google.accompanist:accompanist-insets:0.21.2-beta"
-    implementation "com.google.accompanist:accompanist-insets-ui:0.21.2-beta"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.21.2-beta"
+    implementation "com.google.accompanist:accompanist-insets:0.26.0-alpha"
+    implementation "com.google.accompanist:accompanist-insets-ui:0.26.0-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.0-alpha"
     // compose导航
     implementation "androidx.navigation:navigation-compose:2.5.0"
     // 折叠标题栏
@@ -79,4 +80,10 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    // kotlin序列化
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0-RC"
+    // 更好的Logger
+    implementation 'com.orhanobut:logger:2.2.0'
+    // ComposePager
+    implementation "com.google.accompanist:accompanist-pager:0.26.0-alpha"
 }
