--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id "org.jetbrains.kotlin.kapt" version "1.6.10"
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
 }
 
 task clean(type: Delete) {
