--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.poke.pokewikicompose"
@@ -58,12 +58,12 @@ dependencies {
     //本地mvi封装
     implementation(project(":mvi-core"))
     // coil图片库
-    implementation 'io.coil-kt:coil-compose:2.1.0'
-    implementation 'io.coil-kt:coil-gif:2.1.0'
+    implementation "io.coil-kt:coil-compose:$coil_version"
+    implementation "io.coil-kt:coil-gif:$coil_version"
     // 沉浸式状态栏
-    implementation "com.google.accompanist:accompanist-insets:0.26.0-alpha"
-    implementation "com.google.accompanist:accompanist-insets-ui:0.26.0-alpha"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.0-alpha"
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-insets-ui:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     // compose导航
     implementation "androidx.navigation:navigation-compose:2.5.0"
     // 折叠标题栏
@@ -82,4 +82,6 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     // ComposePager (viewpager)
     implementation "com.google.accompanist:accompanist-pager:0.26.0-alpha"
+    // Compose相册
+    implementation "com.github.leavesCZY:Matisse:0.0.5"
 }
