--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     ext {
         compose_version = '1.2.0'
         room_version = '2.4.2'
+        coil_version = '2.1.0'
+        accompanist_version = '0.26.0-alpha'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
