--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.poke.pokewikicompose"
@@ -44,16 +44,16 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation "androidx.compose.material:material:1.2.1"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.1"
 
     //本地mvi封装
     implementation(project(":mvi-core"))
@@ -65,7 +65,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-insets-ui:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     // compose导航
-    implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
     // 折叠标题栏
     implementation("me.onebone:toolbar-compose:2.3.4")
     //retrofit网络请求
@@ -83,5 +83,7 @@ dependencies {
     // ComposePager (viewpager)
     implementation "com.google.accompanist:accompanist-pager:0.26.0-alpha"
     // Compose相册
-    implementation "com.github.leavesCZY:Matisse:0.0.5"
+    implementation("com.github.leavesCZY:Matisse:0.0.5") {
+        exclude group: 'androidx.activity'
+    }
 }
