完成反馈界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokewikiCompose.NoActionBar">
+        <!--注册内容提供器-->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.poke.pokewikicompose.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_paths" />
+        </provider>
         <activity
             android:name=".AppActivity"
             android:exported="true"
